Version 0.10.2b
===============

Released ???????? ??, ????

- Support for Spain (piliamaurizio, dr-p)
- Support for Turkey (cemkaragozlu)
- Mexico fix (Rosi2143, dr-p)
- Croatia fix (sebojanko, dr-p)
- US Georgia fix (jbroudou, dr-p)
- Austria province ISO3166-2 adoption (jbroudou, dr-p)

Version 0.10.1
==============

Released January 25, 2020

- Project structure refactoring (MaxHaertwig, dr-p)
- Added support for Python3.8 (dr-p)
- Dropped support for pypy and Python3.4, welcome back pypy3 (dr-p)
- Fully reviewed Travis CI integration (dr-p)
- Added 3-digit country ISO codes (MaxHaertwig)
- Support for Paraguay (dr-p, sfeliu)
- Support for Israel (giladmaya, dr-p)
- Support for Egypt (gaberm)
- Support for Serbia (kosugor)
- Support for Singapore (mborsetti)
- README.rst fixes / sync
- Brazil-Parana support (dr-p, jbroudou)
- Japan fixes (dr-p, thophan92, saurabh3896)
- Canada, Spain, US fixes (jbroudou)
- Belarus fix (mpolyakovsky)


Version 0.9.12
==============

Released December 23, 2019

- Support for Nigeria (ioluwayo)
- Support for India - Telangana (kiranbeethoju, dr-p)
- Support for Dominican Republic (gabmartinez)
- Support for Nicaragua (CARocha)
- Code refactoring, bugfixes (vlt)
- Add method to list all supported countries (fabaff)
- Germany bugfixes (bitraten)
- Correctly handle United Kingdom "May Day" holiday in 2020 - #219 (robfraz)
- Hungary fixes (gypapp)
- Chile test fixes (rpanai)
- Italy fixes (jokerigno, sixbladeknife)
- Other minor fixes

Version 0.9.11
==============

Released July 28, 2019

- Added Japanese holidays for new Emperor (kokinamura)
- Fixed Australian Canberra day holiday (explodingdinosaurs, dr-p)
- Added support for Estonian holidays (RaulVS14)
- Added support for Iceland and Kenya (justinasfour04)
- Added support for Aruba (orson1282)
- Added support for Hong Kong (polifaces)
- Added support for Peru (manuelvalino)
- Switzerland fixes (spasche)
- Croatia fix (pave121, dr-p)
- Polish deprecation: replaced by Poland (dr-p)