@@ -162,8 +162,8 @@ Singapore           SG/SGP    None
 Slovakia            SK/SVK    None
 Slovenia            SI/SVN    None
 South Africa        ZA/ZAF    None
-Spain               ES/ESP    prov = AND, ARG, AST, CAN, CAM, CAL, CAT, CVA, EXT, GAL,
-                              IBA, ICA, MAD, MUR, NAV, PVA, RIO
+Spain               ES/ESP    prov = AN, AR, AS, CB, CL, CM, CN, CT, EX, GA, IB, MC,
+                              MD, NC, PV, RI, VC
 Sweden              SE/SWE    None
 Switzerland         CH/CHE    prov = AG, AR, AI, BL, BS, BE, FR, GE, GL, GR, JU, LU,
                               NE, NW, OW, SG, SH, SZ, SO, TG, TI, UR, VD, VS, ZG, ZH
