@@ -9,6 +9,7 @@ Released ???????? ??, ????
 - Croatia fix (sebojanko, dr-p)
 - US Georgia fix (jbroudou, dr-p)
 - Austria province ISO3166-2 adoption (jbroudou, dr-p)
+- Spain province ISO3166-2 adoption (jbroudou, dr-p)
 
 Version 0.10.1
 ==============
